--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,5 @@ include
 lib
 lib64
 pyvenv.cfg
-app/__pycache__/
-app/db/__pycache__/
-app/router/__pycache__/
+app/**/__pycache__
 app/router/playground.py
